<resources>
    <string name="app_name">AdminModule</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="LableProfile">Profile</string>
    <string name="calender_icon" />
    <string name="backword_button_icon" />
    <string name="config_office">Config Office</string>
    <string name="config_reason">Config Reasons</string>
    <string name="config_total_seats">Config Total Seats</string>
    <string name="add_seats">Add Seats</string>
    <string name="add_reasons">Add Reason</string>
    <string name="select_date">Select Date:</string>
    <string name="enter_reason">Enter reason:</string>
    <string name="enter_seats">Enter Seats:</string>
    <string name="reasons">Reasons</string>
    <string name="bookmyseat">BookMySeat</string>
    <string name="login">Login</string>
    <string name="userid">Admin Email</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="reason">Reason :</string>
    <string name="text_hyphen">-</string>
    <string name="emp_name">Emp </string>
    <string name="booked_seats">Booked Seats</string>
    <string name="reserve_seat">Reserve Seat</string>
</resources>