<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.fragments.ConfigFragment">

    <LinearLayout
        android:id="@+id/config_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="6dp"
        android:layout_gravity="center"
        android:layout_marginRight="20dp"
        android:padding="8dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnConfigOffice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_backgroud"
            android:fontFamily="@font/verdana"
            android:gravity="center"
            android:text="@string/config_office"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnConfigReason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_backgroud"
            android:fontFamily="@font/verdana"
            android:text="@string/config_reason"
            android:textColor="#000000"
            android:layout_marginTop="30dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnConfigSeats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_backgroud"
            android:fontFamily="@font/verdana"
            android:text="@string/config_total_seats"
            android:textColor="#000000"
            android:layout_marginTop="30dp"
            android:textSize="20sp" />

    </LinearLayout>

</FrameLayout>