<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeOnes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".UI.activities.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/verdana_bold"
        android:text="@string/bookmyseat"
        android:textColor="@color/light_red"
        android:textSize="@dimen/height_40dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginRight="@dimen/margin_20dp"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userid"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/white" />
        </com.google.android.material.textfield.TextInputLayout>

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/textInputLayoutPassword"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="20dp">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/etPassword"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:hint="@string/password"-->
<!--                android:inputType="textPassword"-->
<!--                android:maxLines="1"-->
<!--                android:textColor="@android:color/black" />-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->


    </LinearLayout>


    <Button
        android:id="@+id/btnAdminLogin"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/height_55dp"
        android:background="#F9FBFB"
        android:text="@string/login"
        android:textColor="#E53935"
        android:textSize="18sp" />

</LinearLayout>